// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphContainerNode > should apply correct styles based on node size 1`] = `
<div
  className="msla-graph-container-wrapper"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;

exports[`GraphContainerNode > should not render DropZone when showLeafComponents is false 1`] = `
<div
  className="msla-graph-container-wrapper"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;

exports[`GraphContainerNode > should render DropZone when showLeafComponents is true 1`] = `
[
  <div
    className="msla-graph-container-wrapper"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <div
      className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
      isConnectable={false}
      position="top"
      type="target"
    >
      Handle reactflow
    </div>
    <div
      className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
      data-automation-id="msla-graph-container-mockid"
    />
    <div
      className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
      isConnectable={true}
      isConnectableEnd={false}
      isConnectableStart={true}
      position="bottom"
      style={
        {
          "transform": "translate(-50%, 0)",
          "visibility": "hidden",
        }
      }
      type="source"
    >
      Handle reactflow
    </div>
  </div>,
  <div
    className="edge-drop-zone-container"
  >
    <div
      graphId=""
      isLeaf={true}
      parentId="mockId"
      tabIndex={0}
    >
      DropZone
    </div>
  </div>,
]
`;

exports[`GraphContainerNode > should render graph container as inactive when is monitoring view 1`] = `
<div
  className="msla-graph-container-wrapper"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;

exports[`GraphContainerNode > should render graph container as normal when in monitoring view 1`] = `
<div
  className="msla-graph-container-wrapper"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;

exports[`GraphContainerNode > should render with footer and be a subgraph 1`] = `
<div
  className="msla-graph-container-wrapper has-footer is-subgraph"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;

exports[`GraphContainerNode > should render without crashing 1`] = `
<div
  className="msla-graph-container-wrapper"
  style={
    {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="___1jzzvj1_8dxafd0 f3bhgqh f15a45g f113wtx2 fly5x3f f1l02sjl fl4tsp0 f2imlf6 f1ewtqcl fj25m7a"
    isConnectable={false}
    position="top"
    type="target"
  >
    Handle reactflow
  </div>
  <div
    className="___12cglbp_5g59060 fly5x3f f1l02sjl f10pi13n f1dmdbja f1ewtqcl f1erghxr f1ehz9de f1spoy8 fmb70yw ftac7j7 f1w0yd9v fdwcyh7 f1h0xgbp fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh"
    data-automation-id="msla-graph-container-mockid"
  />
  <div
    className="___rchrq50_zqh4gx0 f3bhgqh f1022m68 f6bm4uj f79hrhh f9ur42n f3mu39s fugzhns f5gq2j6 f3q69k0"
    isConnectable={true}
    isConnectableEnd={false}
    isConnectableStart={true}
    position="bottom"
    style={
      {
        "transform": "translate(-50%, 0)",
        "visibility": "hidden",
      }
    }
    type="source"
  >
    Handle reactflow
  </div>
</div>
`;
